GetReservation handler added (#18)
* GetReservation handler added
